# Research-Agent

./: .env.example  .gitignore  README.md  config.py  domain.yaml  main.py  pyproject.toml
.streamlit/: config.toml
analysis/: ablation_manager.py  analysis_pipeline.py  baseline_comparator.py  statistical_analyzer.py
core/: database.py  models.py  state.py  token_tracker.py
docker/: Dockerfile.sandbox  docker-compose.yml
experiments/: cloud_runner.py  code_validator.py  experiment_pipeline.py  local_runner.py  result_collector.py  router.py
ingestion/: arxiv_client.py  deduplicator.py  fulltext_fetcher.py  ingestion_pipeline.py  manual_ingest.py  semantic_scholar_client.py  substack_scraper.py
knowledge/: contradiction_detector.py  contradiction_store.py  experiment_store.py  gap_finder.py  gap_store.py  paper_store.py  retriever.py  theme_clusterer.py  theme_store.py  token_log_store.py  vector_store.py
reporting/: report_generator.py
reporting/templates/: experiment_summary.md.j2  weekly_report.md.j2
scheduler/: cron_scheduler.py  pipeline_runner.py
synthesis/: experiment_extractor.py  knowledge_graph.py  paper_analyzer.py  synthesis_pipeline.py
tests/: conftest.py  test_baseline_comparator.py  test_code_validator.py  test_deduplicator.py  test_experiment_pipeline.py  test_result_collector.py  test_statistical_analyzer.py  test_synthesis_pipeline.py  test_token_tracker.py
ui/: app.py
ui/views/: add_paper.py  dashboard.py  experiments.py  living_review.py  papers.py  reports.py  review.py  settings.py
